# openglwindow

./: CMakeLists.txt  README.md  main
src/: glad.c  glad.h  main.cpp
